# sr-web-agent

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  agent.py  app.py  docker-compose.yml  langgraph.json  pyproject.toml  server.py
agents/: navigation_agent.py
core/: __init__.py  base_agent.py  base_tool.py  config.py  events.py  orchestrator.py
map/: __init__.py  graph.py  inspect_graph.py  mongo_loader.py
tools/: kafka_tool.py  navigation.py
