[project]
name = "amr-nav-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "google-genai>=1.0.0",
    "langchain-core>=1.3.0",
    "langgraph>=1.1.9",
    "langgraph-cli>=0.4.23",
    "pymongo>=4.17.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.40.0",
    "uvicorn>=0.45.0",
    "confluent-kafka>=2.8.2",
]
